<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Wim Alert</string>
	<string name="notification_listener_service_label">Wim-notifications listener</string>
	<string name="buildtime">Buildtime: %1$s</string>

	<string name="label_ok">OK</string>
	<string name="label_cancel">Cancel</string>
	<string name="label_done">Done</string>
	<string name="label_yes">Yes</string>
	<string name="label_no">No</string>
	<string name="label_error">Error</string>

	<string name="track_user_dialog_title">User to track</string>
	<string name="track_user_dialog_hint">WhatsApp name</string>

	<string name="track_user_setting_title">User to track</string>
	<string name="track_user_setting_text_nonempty">Tracking \'%1$s\'</string>
	<string name="track_user_setting_text_empty">Not tracking anyone</string>

	<string name="track_regex_title">Regex trigger</string>
	<string name="track_regex_text_nonempty">%1$s</string>
	<string name="track_regex_text_empty">Triggered by everything</string>

	<string name="track_enabled_setting_title">Listen to WhatsApp</string>
	<string name="track_enabled_setting_on">Listener enabled</string>
	<string name="track_enabled_setting_off">Listener disabled</string>

	<string name="settings_setup_button">Connect Light</string>
	<string name="settings_grant_access_title">Notifications Access</string>
	<string name="settings_grant_access_text">For this app to work, it needs access to your
		notifications. Click here to go to your phone\'s settings to grant access to this
		app.</string>

	<string name="settings_start_time_title">Start time</string>
	<string name="settings_end_time_title">End time</string>
	<string name="settings_time_format">%1$02d:%2$02d</string>

	<string name="settings_web_address">Alarm light\'s web address</string>
	<string name="settings_web_address_empty">Web address not set</string>
	<string name="settings_web_address_title">Web address</string>
	<string name="settings_web_address_hint">e.g. 192.168.1.52</string>

	<string name="apply_name">Apply</string>

	<string name="turn_alarm_on">Turn on alarm</string>
	<string name="turn_alarm_off">Turn off alarm</string>

	<string name="alarm_arm_title">Arm alarm</string>
	<string name="alarm_arm_description">Monitor WhatsApp notifications and trigger the alarm when a message from %1$s is received</string>

	<string name="alarm_arm_time_start">Auto arm from</string>
	<string name="alarm_arm_time_end">Auto arm till</string>

	<string name="setup_scanning">Scanning…</string>
	<string name="setup_select_esp_wifi">Select ESP network</string>

</resources>
