<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
		android:gravity="center_horizontal|top"
		android:orientation="vertical">

		<TextView
			android:id="@+id/buildtime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin_default"
			android:src="@drawable/img_alarm_light" />

		<View style="@style/Divider" />

		<LinearLayout
			android:id="@+id/grantAccess"
			style="@style/Settings.Wrapper">

			<LinearLayout style="@style/Settings.Wrapper.Outer">

				<TextView
					style="@style/Settings.Title"
					android:text="@string/settings_grant_access_title" />

				<TextView
					style="@style/Settings.Subtext"
					android:text="@string/settings_grant_access_text" />

			</LinearLayout>

			<View style="@style/Divider" />

		</LinearLayout>

		<LinearLayout
			android:id="@+id/enableTracking"
			style="@style/Settings.Wrapper.Outer.Horizontal">

			<LinearLayout
				style="@style/Settings.Wrapper.Inner">

				<TextView
					style="@style/Settings.Title"
					android:text="@string/track_enabled_setting_title" />

				<TextView
					android:id="@+id/enableTrackingSubtext"
					style="@style/Settings.Subtext" />

			</LinearLayout>

			<Switch
				android:id="@+id/enableTrackingSwitch"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/margin_default" />

		</LinearLayout>

		<View style="@style/Divider" />

		<LinearLayout
			android:id="@+id/trackedUserSetting"
			style="@style/Settings.Wrapper.Outer">

			<TextView
				style="@style/Settings.Title"
				android:text="@string/track_user_setting_title" />

			<TextView
				android:id="@+id/trackedUserSubtext"
				style="@style/Settings.Subtext"
				android:text="@string/track_user_setting_text_empty" />

		</LinearLayout>

		<View style="@style/Divider" />

		<LinearLayout
			android:id="@+id/regex"
			style="@style/Settings.Wrapper.Outer">

			<TextView
				style="@style/Settings.Title"
				android:text="@string/track_regex_title" />

			<TextView
				android:id="@+id/regexSubtext"
				style="@style/Settings.Subtext"
				android:text="@string/track_regex_text_empty" />

		</LinearLayout>

		<View style="@style/Divider" />

		<LinearLayout
			android:id="@+id/startTimeSetting"
			style="@style/Settings.Wrapper.Outer">

			<TextView
				style="@style/Settings.Title"
				android:text="@string/settings_start_time_title" />

			<TextView
				android:id="@+id/startTimeSubtext"
				style="@style/Settings.Subtext" />

		</LinearLayout>

		<View style="@style/Divider" />

		<LinearLayout
			android:id="@+id/endTimeSetting"
			style="@style/Settings.Wrapper.Outer">

			<TextView
				style="@style/Settings.Title"
				android:text="@string/settings_end_time_title" />

			<TextView
				android:id="@+id/endTimeSubtext"
				style="@style/Settings.Subtext" />

		</LinearLayout>

		<View style="@style/Divider" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/turnAlarmOn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/turn_alarm_on" />

			<Button
				android:id="@+id/turnAlarmOff"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/turn_alarm_off" />

		</LinearLayout>

	</LinearLayout>

</ScrollView>
